--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,6 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     set(T_ ${PROJECT_NAME})
     set(T_ ${T_}-${${PROJECT_NAME}_MAJOR_VERSION})
     set(T_ ${T_}.${${PROJECT_NAME}_MINOR_VERSION})
-    set(T_ ${T_}.${${PROJECT_NAME}_BUILD_VERSION})
     set(T_ ${T_}-${${PROJECT_NAME}_BUILD_TAG})
     set(CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/${T_}
         CACHE PATH
@@ -116,12 +115,7 @@ endif()
 
 add_definitions(${Boost_LIB_DIAGNOSTIC_DEFINITIONS})
 add_definitions(-DBOOST_ALL_NO_LIB -DXERCES_STATIC_LIBRARY)
-add_definitions(-DE57_REFIMPL_REVISION_ID=${PROJECT_NAME}-${${PROJECT_NAME}_MAJOR_VERSION}.${${PROJECT_NAME}_MINOR_VERSION}.${${PROJECT_NAME}_BUILD_VERSION}-${${PROJECT_NAME}_BUILD_TAG})
-
-configure_file (
-  "${PROJECT_SOURCE_DIR}/include/config.h.in"
-  "${PROJECT_BINARY_DIR}/include/config.h"
-)
+add_definitions(-DREVISION_ID="${PROJECT_NAME}-${${PROJECT_NAME}_MAJOR_VERSION}.${${PROJECT_NAME}_MINOR_VERSION}-${${PROJECT_NAME}_BUILD_TAG}")
 
 include_directories(
     ${PROJECT_BINARY_DIR}/include
