Automatically set the define for MACOS based on CMAKE_SYSTEM_NAME

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -109,6 +109,8 @@ if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     find_package(ICU REQUIRED)
     set(XML_LIBRARIES ${XML_LIBRARIES} ${ICU_LIBRARIES})
     set(XML_INCLUDE_DIRS ${XML_INCLUDE_DIRS} ${ICU_INCLUDE_DIRS})
+elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
+    add_definitions(-DMACOS)
 elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
     add_definitions(-DWINDOWS)
 endif()
