{travis} Ah, semicolons? Isn't this fun?

--- a/.travis.yml
+++ b/.travis.yml
@@ -31,6 +31,6 @@ before_script:
 
 script:
   - if [[ "${COVERITY_SCAN_BRANCH}" != 1 ]]; then
-      gcc -v && g++ -v && cmake --version
-      make -j2
+      gcc -v && g++ -v && cmake --version;
+      make -j2;
     fi
