{coverity} How about we skip the shadow build stuff?

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ addons:
       name: "asmaloney/libE57Format"
       description: "Library for reading & writing the E57 file format (fork of E57RefImpl) "
     notification_email: asmaloney@gmail.com
-    build_command_prepend: "mkdir build && cd build && cmake -DCMAKE_BUILD_TYPE=Debug .."
+    build_command_prepend: "cmake -DCMAKE_BUILD_TYPE=Debug ."
     build_command: "make -j2"
     branch_pattern: coverity_scan
 
