Use branchless option for CRC calculations
This cut the load time of a 2.65 G file in CloudCompare from 3.8 minutes to 1.6 minutes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,7 @@ include_directories(
 
 # CRCpp from here: https://github.com/d-bahr/CRCpp
 add_definitions( -DCRCPP_USE_CPP11 )
+add_definitions( -DCRCPP_BRANCHLESS )
 include_directories( contrib/CRCpp/inc )
 
 #
