cmake 3.1+ includes the FindXercesC module, so use it instead of our own

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,18 +70,11 @@ endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
 find_package(Threads REQUIRED)
 
-set(Xerces_USE_STATIC_LIBS On)
-find_package(Xerces QUIET)
-if (NOT Xerces_FOUND)
-    set(XERCES_ROOT CACHE PATH "Location of the xerces library")
-    message(FATAL_ERROR
-"Unable to find xerces library.
-Please set the the XERCES_ROOT to point to the root of the xerces directory."
-)
-endif (NOT Xerces_FOUND)
+include(FindXercesC)
+find_package(XercesC REQUIRED)
 
-set(XML_LIBRARIES ${Xerces_LIBRARY})
-set(XML_INCLUDE_DIRS ${Xerces_INCLUDE_DIR})
+set(XML_INCLUDE_DIRS ${XercesC_INCLUDE_DIR})
+set(XML_LIBRARIES ${XercesC_LIBRARY})
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     add_definitions(-DLINUX)
