Add new E57Exception.h to header installs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -145,6 +145,7 @@ install(
 )
 install(
     FILES
+        include/E57Exception.h
         include/E57Foundation.h
     DESTINATION include/E57Format
 )
