FindXercesC does not work properly on Windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,11 +70,15 @@ endif(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 
 find_package(Threads REQUIRED)
 
-include(FindXercesC)
-find_package(XercesC REQUIRED)
+if (${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+	set( XercesC_INCLUDE_DIR "" CACHE PATH "Xerces include directory" )
+else()
+	include(FindXercesC)
+	find_package(XercesC REQUIRED)
+endif()
 
 set(XML_INCLUDE_DIRS ${XercesC_INCLUDE_DIR})
-set(XML_LIBRARIES ${XercesC_LIBRARY})
+#set(XML_LIBRARIES ${XercesC_LIBRARY})
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
     add_definitions(-DLINUX)
