{Windows} Add option to indicate if you are linking to xerces statically
Windows needs to know whether you are linking to xerces statically or dynamically in order to handle import/export of symbols.

Turn USING_STATIC_XERCES on if you are lining to xerces statically. (Default is off)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,14 @@ if ( NOT XercesC_FOUND )
     set( XercesC_INCLUDE_DIR "" CACHE PATH "Xerces include directory" )
 endif()
 
+if ( WIN32 )
+    option( USING_STATIC_XERCES "Turn on if you are linking with Xerces as a static lib" OFF )
+
+    if ( USING_STATIC_XERCES )
+        add_definitions( -DXERCES_STATIC_LIBRARY )
+    endif()
+endif()
+
 set( XML_INCLUDE_DIRS ${XercesC_INCLUDE_DIR} )
 
 if (${CMAKE_SYSTEM_NAME} STREQUAL "Linux")
