{cmake} Move version info into project()

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,12 +40,10 @@ set(CMAKE_USER_MAKE_RULES_OVERRIDE_CXX ${CMAKE_CURRENT_SOURCE_DIR}/cmake/cxx_fla
 # Set a private module find path
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/Modules/")
 
-project(E57Format)
+project( E57Format
+    VERSION 2.0.2
+)
 
-# developer adjustable version numbers
-set(${PROJECT_NAME}_MAJOR_VERSION 2)
-set(${PROJECT_NAME}_MINOR_VERSION 0)
-set(${PROJECT_NAME}_PATCH_VERSION 1)
 
 include(Tags)
 
@@ -53,8 +51,8 @@ include(Tags)
 if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
     string(REGEX REPLACE "/${PROJECT_NAME}" "" CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
     set(T_ ${PROJECT_NAME})
-    set(T_ ${T_}-${${PROJECT_NAME}_MAJOR_VERSION})
-    set(T_ ${T_}.${${PROJECT_NAME}_MINOR_VERSION})
+    set(T_ ${T_}-${PROJECT_VERSION_MAJOR})
+    set(T_ ${T_}.${PROJECT_VERSION_MINOR})
     set(T_ ${T_}-${${PROJECT_NAME}_BUILD_TAG})
     set(CMAKE_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/${T_}
         CACHE PATH
@@ -113,7 +111,7 @@ target_compile_definitions( E57Format
     PRIVATE
         -DCRCPP_USE_CPP11
         -DCRCPP_BRANCHLESS
-        -DREVISION_ID="${PROJECT_NAME}-${${PROJECT_NAME}_MAJOR_VERSION}.${${PROJECT_NAME}_MINOR_VERSION}.${${PROJECT_NAME}_PATCH_VERSION}-${${PROJECT_NAME}_BUILD_TAG}"
+        -DREVISION_ID="${PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}-${${PROJECT_NAME}_BUILD_TAG}"
 )
 
 if ( WIN32 )
