add E57Simple API from the original reference library

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -5,12 +5,14 @@ target_sources( ${PROJECT_NAME}
 	PRIVATE
 		${CMAKE_CURRENT_LIST_DIR}/E57Format.h
 		${CMAKE_CURRENT_LIST_DIR}/E57Exception.h
+		${CMAKE_CURRENT_LIST_DIR}/E57Simple.h
 )
 
 install(
 	FILES
 		E57Format.h
 		E57Exception.h
+		E57Simple.h
 	DESTINATION
 		include/E57Format
 )
