--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -24,10 +24,12 @@ target_sources( E57Format
         ${CMAKE_CURRENT_LIST_DIR}/E57Format.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57FormatImpl.cpp
         ${CMAKE_CURRENT_LIST_DIR}/E57FormatImpl.h
+        ${CMAKE_CURRENT_LIST_DIR}/E57Simple.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/E57SimpleImpl.cpp
+        ${CMAKE_CURRENT_LIST_DIR}/E57SimpleImpl.h
         ${CMAKE_CURRENT_LIST_DIR}/E57Version.h
-        ${CMAKE_CURRENT_LIST_DIR}/E57XmlParser.h
         ${CMAKE_CURRENT_LIST_DIR}/E57XmlParser.cpp
-
+        ${CMAKE_CURRENT_LIST_DIR}/E57XmlParser.h
 )
 
 target_include_directories( E57Format
