--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,17 +14,17 @@ jobs:
         build_type: ["Debug", "Release"]
         config:
           - {
-              name: "macOS Clang",
+              name: "macOS Clang (${{ matrix.build_type }})",
               os: macos-latest,
               generator: "Ninja",
             }
           - {
-              name: "Ubuntu GCC",
+              name: "Ubuntu GCC (${{ matrix.build_type }})",
               os: ubuntu-latest,
               generator: "Ninja",
             }
           - {
-              name: "Windows MSVC",
+              name: "Windows MSVC (${{ matrix.build_type }})",
               os: windows-latest,
               generator: "Ninja",
            }
@@ -36,19 +36,19 @@ jobs:
       - name: Install Dependencies (macOS)
         if: matrix.config.os == 'macos-latest'
         run: |
-          brew install ninja
+          brew install ninja xerces-c
 
       - name: Install Dependencies (Ubuntu)
         if: matrix.config.os == 'ubuntu-latest'
         run: |
           sudo apt-get update
 
-          sudo apt-get install -y ninja-build
+          sudo apt-get install -y libxerces-c-dev ninja-build
 
       - name: Install Dependencies (Windows)
         if: matrix.config.os == 'windows-latest'
         run: |
-          conda install -y -c conda-forge ninja
+          conda install -y -c conda-forge ninja xerces-c
 
       - name: Configure MSVC console (Windows)
         if:  matrix.config.os == 'windows-latest'
