Allow building E57Format as a shared library

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -18,6 +18,7 @@ install(
 target_include_directories( ${PROJECT_NAME}
 	PUBLIC
 		$<INSTALL_INTERFACE:include/E57Format>
+	PRIVATE
 		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
 )
 
