--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,17 +16,14 @@ jobs:
           - {
               name: "macOS Clang",
               os: macos-latest,
-              generator: "Ninja",
             }
           - {
               name: "Ubuntu GCC",
               os: ubuntu-latest,
-              generator: "Ninja",
             }
           - {
               name: "Windows MSVC",
               os: windows-latest,
-              generator: "Ninja",
            }
 
     steps:
@@ -75,8 +72,9 @@ jobs:
 
           cmake
           -B libE57Format-build
-          -G "${{ matrix.config.generator }}"
+          -G "Ninja"
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DCMAKE_CXX_FLAGS_DEBUG="-g -DE57_MAX_VERBOSE"
           .
 
       - name: Build
