--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,6 +95,8 @@ add_subdirectory( extern/CRCpp )
 add_subdirectory( include )
 add_subdirectory( src )
 
+include( ClangFormat )
+
 # Target properties
 set_target_properties( E57Format
 	PROPERTIES
