split E57Simple API to 3 files
* create E57SimpleData.h, E57SimpleReader.h, E57SimpleWriter.h

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -3,9 +3,11 @@
 
 target_sources( ${PROJECT_NAME}
 	PRIVATE
-		${CMAKE_CURRENT_LIST_DIR}/E57Format.h
 		${CMAKE_CURRENT_LIST_DIR}/E57Exception.h
-		${CMAKE_CURRENT_LIST_DIR}/E57Simple.h
+		${CMAKE_CURRENT_LIST_DIR}/E57Format.h
+		${CMAKE_CURRENT_LIST_DIR}/E57SimpleData.h
+		${CMAKE_CURRENT_LIST_DIR}/E57SimpleReader.h
+		${CMAKE_CURRENT_LIST_DIR}/E57SimpleWriter.h
 )
 
 install(
